modificación de propiedades de texto

--- a/index.html
+++ b/index.html
@@ -56,13 +56,14 @@
   </header>
 
     <!-- Sección de Extracto de la Empresa -->
-    <section class="extracto mt-5">
-            <h2>Sobre Nosotros</h2>
-        <p class="text-center px-5">Te lo Vendo es un emprendimiento de un grupo de jóvenes dedicados a vender productos en línea. Actualmente,
+
+    <section class="extracto mt-5">  <!-- Modificación de propiedades de texto-->
+            <h2 class="text-center">Sobre Nosotros</h2>
+        <p class="text-center">Te lo Vendo es un emprendimiento de un grupo de jóvenes dedicados a vender productos en línea. Actualmente,
             realizamos nuestros pedidos vía telefónica y correo electrónico, pero estamos en proceso de mejorar nuestro
             sistema para ofrecer una experiencia más eficiente y centralizada. Nuestro objetivo es proporcionar una
             gestión de pedidos más efectiva, asegurando entregas oportunas y satisfacción del cliente.</p>
-        <p class="text-center px-5">Estamos ubicados en el corazón de la ciudad, y nos dedicamos a la venta de productos variados que cubren una
+        <p class="text-center">Estamos ubicados en el corazón de la ciudad, y nos dedicamos a la venta de productos variados que cubren una
             amplia gama de necesidades de nuestros clientes. Nuestro compromiso es con la calidad y la mejora continua
             de nuestros servicios.</p>
     </section>
