--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <!-- Encabezado Principal del Sitio -->
+  <!-- Encabezad Principal del Sitio -->
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark text-bg-dark">
