cambios en el footer

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Sección de Extracto de la Empresa -->
 
     <section class="extracto mt-5">  <!-- Modificación de propiedades de texto-->
-            <h2 class="text-center">Sobre Nosotros</h2>
+            <h2 class="text-center">Quienes somos</h2> <!--Cambio de quienes somos-->
         <p class="text-center">Te lo Vendo es un emprendimiento de un grupo de jóvenes dedicados a vender productos en línea. Actualmente,
             realizamos nuestros pedidos vía telefónica y correo electrónico, pero estamos en proceso de mejorar nuestro
             sistema para ofrecer una experiencia más eficiente y centralizada. Nuestro objetivo es proporcionar una
