Se agrega la fecha en los footer a solicitud de Susana

--- a/estadísticas.html
+++ b/estadísticas.html
@@ -159,6 +159,9 @@
         <p>
             Sharon Bastidas; Jose Aravena; Ivan Rodriguez; Walter Pacheco; César Hernández;
         </p>
+        <p>
+          Santiago 16 de Junio del 2014
+        </p>
     </footer>
     <script src="assets/js/funciones.js"></script>
     <script src="https://cdn.datatables.net/2.0.8/js/dataTables.js"></script>
